# openwebui-extensions

./: .gitignore  LICENSE  README.md  pyproject.toml
functions/: anthropic.py  gemini.py
tools/: brave-search.py  get-time.py  github-content.py
